tests/sksl/errors/StaticSwitchConditionalBreak.sksl
void conditional_break_in_static_switch() {
    int x = 1;
    @switch (x) {
        case 1:
            sk_FragColor = half4(1);
            if (sqrt(0) < sqrt(1)) break;
        default:
            sk_FragColor = half4(0);
    }
}
